--- a/package.json
+++ b/package.json
@@ -9,18 +9,47 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.2",
+    "@hookform/resolvers": "^2.9.10",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
+    "axios": "^1.2.1",
     "expo": "~47.0.9",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.41.1",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-dropdownalert": "^4.5.1",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.9",
+    "rn-tooltip": "^3.0.3",
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/axios": "^0.14.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^8.30.0",
+    "eslint-config-universe": "^11.1.1",
+    "prettier": "^2.8.1",
     "typescript": "^4.6.3"
+  },
+  "eslintConfig": {
+    "extends": "universe/native"
   },
   "private": true
 }
